# external-storage-manager

./: CMakeLists.txt  LICENSE  README  README.md  TODO  index.html  meson.build  params.json
data/: CMakeLists.txt  com.github.artefactop.external-storage-manager.appdata.xml  external-storage-manager.desktop
debian/: changelog  control  copyright
icons/: CMakeLists.txt
src/: CMakeLists.txt  ExternalStorageManager.vala  config.vala.cmake
src/Core/: Device.vala
src/Widgets/: DeviceMenuItem.vala
